# mask-layer-tool

./: .gitignore  README.md  pyproject.toml
mask_layer_tool/: channel_handler.py  image_loader.py  main.py  window_qt.py
tests/: test_channel_handler.py  test_image_loader.py
